--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,30 @@
     font-weight:700;
 }
 
+#carousel{
+    border:solid rgb(222,226,230);
+    border-width:1px;
+    border-radius:7px;
+    width:80%;
+    height:450px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#carousel img{
+    height:448px;
+    border-radius:7px;
+    object-fit: cover;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index:9;
+    background:white;
+  }
+
 h1{
     font-family:Impact;
     text-align:center;
@@ -16,15 +40,22 @@ li a{
     font-size:18px;
 }
 
-li:hover{
-    background: rgba(33,37,41);
+button{
+    background:white;
+}
+
+li > button{
+    border:0px;
+    border-style:initial;
     border-radius:5px;
+    color:rgba(33,37,41) !important;
 }
 
-a{
-    color:black !important;
+#btn1:hover{
+    color:white !important;
 }
 
-li:hover > a{
+li:hover > button{
+    background: rgba(33,37,41);
     color:white !important;
 }
