--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
     font-weight:700;
 }
 
+@font-face {
+    font-family: CodeNext;
+    src: url("../fonts/CodeNext-Trial-Heavy.otf");
+}
+
 #carousel{
     border:solid rgb(222,226,230);
     border-width:1px;
@@ -27,7 +32,7 @@ header {
   }
 
 h1{
-    font-family:Impact;
+    font-family:CodeNext;
     text-align:center;
 }
 
@@ -58,4 +63,125 @@ li > button{
 li:hover > button{
     background: rgba(33,37,41);
     color:white !important;
+}
+
+.footer-menu{
+    float: right;
+  }
+  
+  .footer-menu ul{
+    display: flex;
+  }
+  
+  .footer-menu ul li{
+  padding-right: 10px;
+  display: block;
+  }
+  
+  .footer-menu ul li a{
+    color: rgb(33,37,41);
+    text-decoration: none;
+  }
+  
+  .footer-menu ul li a:hover{
+    color: #27bcda;
+  }
+
+  .footer-bottom p{
+    float: left;
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+ }
+ .footer-bottom p a{
+   color:#44bae8;
+   font-size: 16px;
+   text-decoration: none;
+ }
+ .footer-bottom span{
+     text-transform: uppercase;
+     opacity: .4;
+     font-weight: 200;
+ }
+
+ .footer-bottom{
+    background: #7C837F;
+    width: 100%;
+    padding: 20px;
+    padding-bottom: 40px;
+    text-align: center;
+}
+
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.socials a{
+    text-decoration: none;
+    color: rgb(33,37,41);
+    border: 1.1px solid rgb(33,37,41);
+    padding: 5px;
+    border-radius: 50%;
+}
+.socials a ion-icon{
+    
+}
+
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+    color: rgb(33,37,41);
+    font-weight:200;
+}
+
+.footer-content h3{
+    font-size: 2.1rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+footer{
+    font-family: CodeNext;
+    bottom:0px;
+    background-image: linear-gradient(white 0%,#7C837F 80%);
+    height: auto;
+    width: 100%;
+    padding-top: 40px;
+    color:rgb(33,37,41);
+}
+
+.nav-button-bottom{
+    background:none;
+    color:white !important;
+}
+
+.nav-button-bottom:hover{
+    color:white !important;
+}
+
+@media screen and (max-width: 767px) {
+    #collapse{
+        display:none !important;
+    }
+    #collapse2{
+        display:none;
+    }
 }
