--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,18 @@
 }
 
 @font-face {
-    font-family: CodeNext;
-    src: url("../fonts/CodeNext-Trial-Heavy.otf");
+    font-family: Didot;
+    src: url("../fonts/didot ssv/Didot\ Regular.ttf");
+}
+
+@font-face {
+    font-family: DidotBold;
+    src: url("../fonts/didot ssv/Didot\ LT\ Std\ Bold.otf");
+}
+
+.bettertext{
+    font-size:larger;
+    font-weight: bolder;
 }
 
 #carousel{
@@ -12,6 +22,7 @@
     border-width:1px;
     border-radius:7px;
     width:80%;
+    max-width:1320px;
     height:450px;
     margin-left: auto;
     margin-right: auto;
@@ -23,20 +34,140 @@
     object-fit: cover;
 }
 
+#bettercol1{
+    vertical-align: center;
+    margin:auto;
+}
+
+#bettercol2{
+    vertical-align: center;
+    margin:auto;
+}
+
+#bettercol3{
+    text-align:center;
+    vertical-align: center;
+    margin:auto;
+}
+
+img{
+    border-radius:7px;
+}
+
+#facebook{
+    text-align: center;
+}
+
+#youtube{
+    text-align:center;
+}
+
+#facebook iframe{
+    border:solid rgb(222,226,230) 2px;
+    border-radius:7px;
+}
+
+#facebook span{
+    padding:5px;
+    color:rgb(33,37,41);
+    text-decoration:underline;
+    font-size:larger;
+    font-weight: bolder;
+}
+
+#youtubeframe{
+    border-radius:7px;
+}
+
+#youtube span{
+    padding:5px;
+    color:rgb(33,37,41);
+    text-decoration:underline;
+    font-size:larger;
+    font-weight: bolder;
+}
+
+#section2{
+    width:80%;
+    height:450px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#section3{
+    width:80%;
+    text-align:center;
+}
+
+#section4{
+    width:80%;
+    text-align:center;
+}
+
 header {
     position: sticky;
     top: 0;
     width: 100%;
     z-index:9;
     background:white;
-  }
+}
+
+p{
+    font-family:Didot;
+}
+
+span{
+    font-family:Didot;
+}
+
+#navbar {
+    margin:0px !important;
+}
+
+.abouttext{
+    width:40%;
+    text-align:center;
+    margin-left: auto;
+    margin-right:auto;
+    font-family:Didot;
+}
+
+#keyfeatures{
+    width:50%;
+    font-family:Didot;
+}
+
+#sleeping{
+    width:50%;
+    font-family:Didot;
+}
+
+.abouttext2{
+    font-family:Didot;
+}
 
 h1{
-    font-family:CodeNext;
+    font-family:DidotBold;
+    font-weight:bolder;
+    text-align:center;
+}
+
+h2{
+    font-family:DidotBold;
+    font-weight:bolder;
+    text-align:center;
+}
+h3{
+    font-family:DidotBold;
+    font-weight:bolder;
     text-align:center;
 }
 
 #btn1{
+    font-family:Impact;
+}
+
+#btn2{
     font-family:Impact;
 }
 
@@ -53,6 +184,7 @@ li > button{
     border:0px;
     border-style:initial;
     border-radius:5px;
+    font-family: Didot !important;
     color:rgba(33,37,41) !important;
 }
 
@@ -105,7 +237,7 @@ li:hover > button{
  }
 
  .footer-bottom{
-    background: #7C837F;
+    background: #b8b8b8;
     width: 100%;
     padding: 20px;
     padding-bottom: 40px;
@@ -113,23 +245,29 @@ li:hover > button{
 }
 
 .socials{
-    list-style: none;
-    display: flex;
-    align-items: center;
+    list-style:none;
+    display:flex;
+    align-items:center;
     justify-content: center;
     margin: 1rem 0 3rem 0;
 }
 .socials li{
     margin: 0 10px;
+    margin-right:10px;
+    
 }
 .socials a{
     text-decoration: none;
     color: rgb(33,37,41);
-    border: 1.1px solid rgb(33,37,41);
-    padding: 5px;
-    border-radius: 50%;
+    padding:3px;
 }
+
 .socials a ion-icon{
+    font-size:25px;
+}
+
+.socials a ion-icon:hover{
+    color: blue;
     
 }
 
@@ -159,9 +297,9 @@ li:hover > button{
 }
 
 footer{
-    font-family: CodeNext;
+    font-family: DidotBold;
     bottom:0px;
-    background-image: linear-gradient(white 0%,#7C837F 80%);
+    background-image: linear-gradient(white 10%,#b8b8b8 60%);
     height: auto;
     width: 100%;
     padding-top: 40px;
@@ -170,18 +308,53 @@ footer{
 
 .nav-button-bottom{
     background:none;
-    color:white !important;
+    color:rgb(33,37,41) !important;
 }
 
 .nav-button-bottom:hover{
     color:white !important;
 }
 
+@media screen and (max-width: 1216px) {
+    #keyfeatures{
+        width:70%;
+    }
+    .abouttext{
+        width:80%;
+    }
+    #youtubeframe{
+        width:600px;
+        height:375px;
+    }
+}
+
 @media screen and (max-width: 767px) {
+    
+    #youtubeframe{
+        width:375px;
+        height:200px;
+    }
     #collapse{
         display:none !important;
     }
     #collapse2{
         display:none;
+    }
+    #fmenu{
+        display:none;
+    }
+    #fbottom{
+        text-align: center !important;
+    }
+    #buttonbar > li button{
+        font-size:14px;
+    }
+
+}
+
+@media screen and (max-width: 516px) {
+    #youtubeframe{
+        width:250px;
+        height:150px;
     }
 }
